优化了浮点数输出的代码，增加了更多字体支持，优化了界面表现

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@
 
 **/Core/**
 **/Drivers/**
+.clang-format
+.mxproject
+Makefile
+startup_stm32g031xx.s
+software/STM32G031G8Ux_FLASH.ld
+software/usbMeter.code-workspace
+software/.gitignore
